# api/docs/swagger.json
@@ -1349,6 +1349,10 @@
                 },
                 "publisher": {
                     "type": "string"
+                },
+                "rent_status": {
+                    "description": "1：未借出 2：已借出",
+                    "type": "integer"
                 }
             }
         },
